# flexi-logger-datadog

./: Cargo.toml  README.md
.github/workflows/: audit.yml  automerge.yml  ci.yml  release.yml
examples/: tokio.rs
src/: adapter.rs  config.rs  error.rs  lib.rs  writer.rs
